--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,12 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+b{
+	font-variant:small-caps;
+}
+
+span[epub|type~="subtitle"]{
+	display: block;
+	font-weight: normal;
+	font-variant: small-caps;
+}
