Add cover and titlepage images

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -21,7 +21,6 @@ span[epub|type~="subtitle"]{
 	margin-right: 0;
 }
 
-[epub|type~="z3998:letter"] > p:first-child,
 [epub|type~="z3998:letter"] > header + p{
 	text-indent: 0;
 }
@@ -55,6 +54,7 @@ span[epub|type~="subtitle"]{
 	text-align: right;
 }
 
-[epub|type~="z3998:postscript"]{
-	margin-top: 1em;
+p.subjectline{
+	text-align: center;
+	font-variant: small-caps;
 }
