Adjust class name

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -50,7 +50,7 @@ span[epub|type~="subtitle"]{
 	text-align: right;
 }
 
-p.subjectline{
+p.subject-line{
 	text-align: center;
 	font-variant: small-caps;
 }
