--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -54,3 +54,22 @@ span[epub|type~="subtitle"]{
 	text-align: center;
 	font-variant: small-caps;
 }
+
+[epub|type~="z3998:song"] p{
+	text-align: left;
+	text-indent: 0;
+}
+
+[epub|type~="z3998:song"] p > span{
+	display: block;
+	padding-left: 1em;
+	text-indent: -1em;
+}
+
+[epub|type~="z3998:song"] p > span + br{
+	display: none;
+}
+
+[epub|type~="z3998:song"] + p{
+	text-indent: 0;
+}
