--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -23,7 +23,7 @@ footer{
 }
 
 [epub|type~="z3998:poem"] p{
-	text-align: left;
+	text-align: initial;
 	text-indent: 0;
 }
 
@@ -47,7 +47,7 @@ footer{
 }
 
 [epub|type~="z3998:song"] p{
-	text-align: left;
+	text-align: initial;
 	text-indent: 0;
 }
 
